--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
 name: Generate SBOM Report with Syft
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:     #added
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   generate-sbom:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
@@ -22,5 +28,5 @@ jobs:
     - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: spdx
-        path: spdx.json
+        name: spdx-report
+        path: spdx.json       #modified
